--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Bot</title>
-    <meta name="description" content="idk something about ur bot goes here">
+    <title>Pichu</title>
+    <meta name="description" content="i am just trying to make a bot lmao">
     <meta name="theme-color" content="#f54254">
     <link rel="icon" type="image/png" sizes="300x250" href="assets/img/superthumb.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -32,8 +32,8 @@
     </nav>
     </div>
     <header class="d-xl-flex flex-column justify-content-xl-center align-items-xl-center" style="height: 418px;text-align: center;margin: 55px;"><img class="rounded" src="https://cdn.discordapp.com/attachments/775384036285218869/776188652463456256/nUXFft6.gif" width="150" height="150" style="margin-top: 30px;">
-        <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color);">Bot</h1>
-        <p style="color: var(--secondary-text-color);">a bot that does random things!</p>
+        <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color);">Pichu</h1>
+        <p style="color: var(--secondary-text-color);">test bot xd</p>
         <div class="tada animated"><div role="group" class="btn-group">    <a href="https://discord.com/invite/" class="btn btn-primary shadow-none" type="button" style="margin: 5px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;">Invite Me</a>
 	
 	<a class="btn btn-primary smoothScroll shadow-none" role="button" style="margin: 5px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;"
@@ -74,11 +74,11 @@
             <div class="container-fluid text-white">
                 <div class="row row-cols-3 justify-content-center" style="color: var(--secondary-text-color);">
                     <div class="col-auto col-md-6 col-lg-4 text-center pb-5 pt-5 number-item love_counter">
-                        <h1 class="love_count" style="font-size: 70px;"><strong>297</strong></h1>
+                        <h1 class="love_count" style="font-size: 70px;"><strong>13</strong></h1>
                         <h4 style="color: var(--main-color);margin-top: -6px;">Total Servers</h4>
                     </div>
                     <div class="col-auto col-lg-4 text-center align-self-center pb-5 pt-5 love_counter">
-                        <h1 class="love_count" style="font-size: 70px;"><strong>98399</strong></h1>
+                        <h1 class="love_count" style="font-size: 70px;"><strong>16</strong></h1>
                         <h4 style="color: var(--main-color);margin-top: -6px;">Total Users</h4>
                     </div>
                 </div>
@@ -87,14 +87,7 @@
   <h2>All Commands</h2>
   <div class="accordion">
          
-    <! --- If you want more just copy the following code from here -- >
-          <div class="accordion-item">
-      <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">Standard Commands</span><span class="icon" aria-hidden="true"></span></button>
-      <div class="accordion-content">
-        <p>!help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br>!help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands<br> !help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br>!help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands<br> !help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br>!help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br> fuck <br> hi <br> lol</p>
-      </div>
-    </div>
-    <! --- to here :D -- >
+
     <! --- If you want more just copy the following code from here -- >
           <div class="accordion-item">
       <button id="accordion-button-2" aria-expanded="false"><span class="accordion-title">Standard Commands</span><span class="icon" aria-hidden="true"></span></button>
@@ -106,8 +99,7 @@
           <div class="accordion-item">
       <button id="accordion-button-3" aria-expanded="false"><span class="accordion-title">Fun Commands</span><span class="icon" aria-hidden="true"></span></button>
       <div class="accordion-content">
-        <p>!hug - hugs a user <br> !ban - bans a user
-        </p>
+        <p>!hug - hugs a user <br> !ban - bans a user <br> !kick - kicks a user <br> !mute - mutes a user
       </div>
     </div>
 
@@ -131,9 +123,9 @@
             <div class="row">
                 <div class="col item social"><a class="smoothScroll" href="#top"><i class="icon ion-android-arrow-up"></i></a></div>
             </div>
-            <p class="copyright" style="color: var(--text-color);">Bot © 2021</p>
+            <p class="copyright" style="color: var(--text-color);">Pichu © 2021</p>
             <p class="copyright" style="color: var(--text-color);padding: 0px;">
-                <!--Consider leaving this to give credit to me for making this, I worked hard on it and it makes me feel good :D-->Theme by&nbsp;<a href="https://itshoozi.com" style="color: var(--main-color);">itsHoozi</a></p>
+                <!--Consider leaving this to give credit to me for making this, I worked hard on it and it makes me feel good :D-->Theme by&nbsp;<a href="https://itshoozi.com" style="color: var(--background);">itsHoozi</a></p>
         </div>
     </div>
     <script src="assets/js/jquery.min.js"></script>
